<resources>
  <string name="app_name">Catalogue Movie</string>
  <string name="daily_reminder_message">Dicoding Catalogue Movie missing you..</string>
  <string name="movie_found">Movies found</string>
  <string name="movie_not_found">Movies not found</string>
  <string name="failed">Failed</string>
  <string name="exception">Failed, Exception error</string>
  <string name="change_language">Change Language Settings</string>
  <string name="navigation_drawer_open">Open</string>
  <string name="navigation_drawer_close">Close</string>
  <string name="be_available">This feature will be available soon</string>
  <string name="now">Now Playing</string>
  <string name="upcoming">Upcoming</string>
  <string name="search_movie">Search Movie</string>
  <string name="cari">SEARCH</string>
  <string name="detail">Detail</string>
  <string name="share">Share</string>
  <string name="catalogue_movie">Catalogue Movie</string>
  <string name="detail_movie">Detail Movie</string>
  <string name="title">Title</string>
  <string name="release_date">Release Date:</string>
  <string name="revenue">Revenue</string>
  <string name="status">Status</string>
  <string name="tagline">Tagline</string>
  <string name="vote_average">Vote Average</string>
  <string name="vote_count">Vote count</string>
  <string name="colon">:</string>
  <string name="name">Name</string>
  <string name="user">Fepriyadi Harahap</string>
  <string name="user_email">fepriyadihrp@gmail.com</string>
  <string name="setting">Setting</string>
  <string name="home">Home</string>
  <string name="fav_empty">Data Favourite belum ada</string>
  <string name="title_fav">Catalogue Movie Basis Data</string>
  <string name="appwidget_text">LIST OF FAVOURITE</string>
  <string name="empty_text">NO DATA</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="toast_no_movie_found">No movie found</string>
  <string name="msg_wrong_while_getting_data">Something\'s wrong while getting data</string>
  <string name="popular">Playing</string>
  <string name="top">Upcoming</string>
  <string name="search">Search</string>
  <string name="favorites">Favourite</string>
  <string name="favorite">Favourite</string>
    <string name="bundle_key_movie" translatable="false">bundle_key_movie</string>

    <!-- Transition Values-->
    <string name="transition_name_image" translatable="false">TransitionImage</string>

    <!-- Navigation Strings -->

    <!-- General Strings-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating">Rating</string>
    <string name="released">Released</string>
    <string name="no_reviews">No Reviews</string>
    <string name="no_videos">No Videos</string>
    <string name="videos">Videos</string>
    <string name="overview">Overview</string>
    <string name="reviews">Reviews</string>

    <!-- Example Strings -->
    <string name="example_title">Lorem ipsum dolor sit amet, consectetur.</string>
    <string name="example_synopsis">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis molestie ac est id porttitor. Suspendisse erat ligula, consequat vitae tristique nec, suscipit ut nibh. Maecenas vitae porttitor tortor, quis maximus felis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque ac sollicitudin orci. Vivamus id tortor consectetur, auctor magna vel, scelerisque massa. Pellentesque eu nunc nec velit molestie auctor vel vel mi. Fusce hendrerit massa quis sapien tincidunt, ut molestie eros facilisis. Fusce imperdiet malesuada mi, vitae accumsan ante aliquam eget. Suspendisse potenti. Sed eu risus ut metus cursus dapibus. Fusce tincidunt porta tortor at interdum.</string>
    <string name="example_author">Brian Estrada</string>
    <string name="example_review">Pellentesque id varius libero, ac fringilla sapien. Sed magna lectus, gravida ut cursus quis, ultricies a libero. Phasellus faucibus augue id elit finibus tempor. Donec aliquet leo quam, ac gravida lacus laoreet rhoncus. Pellentesque vitae erat ut purus maximus pellentesque. Quisque dignissim urna euismod porttitor efficitur. Nam id sem ornare, ullamcorper urna eu, pharetra nunc. Integer luctus erat lectus, vitae euismod est lacinia eget. Aliquam volutpat gravida erat ut rhoncus. Fusce ut semper augue. In aliquet augue ac ante cursus, quis placerat purus ultricies. Sed sit amet sagittis urna, vitae rhoncus nibh. Quisque facilisis, ipsum efficitur tristique dignissim, odio tellus dignissim enim, eget tincidunt augue lectus quis eros. Ut orci massa, finibus quis erat vel, volutpat consectetur mauris. In ultricies, velit ac ultricies porta, ante augue interdum nunc, id feugiat justo odio et erat.</string>
    <string name="example_year">2016</string>
    <string name="example_rating">3.8</string>
    <string name="example_video_title">Aliquam vitae purus porta, bibendum</string>
    <string name="example_video_resolution">1080</string>
    <string name="example_video_source">Youtube</string>
    <string name="bundle_key_movie_state">bundle_key_movie_state</string>
    <string name="content_descriptor_poster_image">Poster Image</string>
    <string name="no_favorites">No favorites yet :)</string>
    <string name="search_hint">Search...</string>

</resources>
