<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/now_playing"
        android:enabled="true"
        android:icon="@drawable/ic_local_movies_black_24dp"
        android:title="@string/popular"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/up_coming"
        android:enabled="true"
        android:icon="@drawable/ic_movie_black_24dp"
        android:title="@string/top"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favourite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />

</menu>