<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="8dp"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical">

    <TextView
      android:id="@+id/tv_movie_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="@style/AppTheme.ViewMovie.TextAppearance.Title"
      tools:text="@string/example_title" />

  </LinearLayout>


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/tv_rating_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:text="@string/rating"
      android:textAppearance="@style/AppTheme.ViewMovie.TextAppearance.Caption"
      android:layout_marginRight="8dp" />

    <RatingBar
      android:id="@+id/rb_rating"
      style="@style/Widget.AppCompat.RatingBar.Small"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:numStars="5"
      android:rating="5"
      android:layout_marginRight="8dp" />


    <TextView
      android:id="@+id/tv_rating"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:textAppearance="@style/AppTheme.ViewMovie.TextAppearance.Body"
      tools:text="@string/example_rating"
      android:layout_marginRight="8dp" />

  </LinearLayout>


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/tv_title_release_year"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:text="@string/released"
      android:textAppearance="@style/AppTheme.ViewMovie.TextAppearance.Caption"
      android:layout_marginRight="8dp" />

    <TextView
      android:id="@+id/tv_release_year"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      android:textAppearance="@style/AppTheme.ViewMovie.TextAppearance.Body"
      tools:text="@string/example_year" />

  </LinearLayout>


</LinearLayout>