<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:card_view="http://schemas.android.com/apk/res-auto"
  android:id="@+id/card_view"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_gravity="center"
  android:layout_marginBottom="4dp"
  android:layout_marginLeft="8dp"
  android:layout_marginRight="8dp"
  android:layout_marginTop="4dp"
  card_view:cardCornerRadius="4dp">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:padding="8dp">

    <ImageView
      android:id="@+id/img_item_photo"
      android:layout_width="150dp"
      android:layout_height="220dp"
      android:layout_marginBottom="4dp"
      android:scaleType="centerCrop" />

    <TextView
      android:id="@+id/tv_item_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="11dp"
      android:singleLine="true"
      android:text="@string/name"
      android:textSize="16sp"
      android:textStyle="bold"
      android:layout_alignParentTop="true"
      android:layout_alignLeft="@+id/linearLayout"
      android:layout_alignStart="@+id/linearLayout" />

    <TextView
      android:id="@+id/tv_item_date_release"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ellipsize="none"
      android:maxLines="2"
      android:paddingTop="10dp"
      android:text="@string/release_date"
      android:textSize="15dp"
      android:layout_below="@+id/tv_item_review"
      android:layout_alignLeft="@+id/tv_item_review"
      android:layout_alignStart="@+id/tv_item_review" />

    <TextView
      android:id="@+id/tv_item_review"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ellipsize="none"
      android:maxLines="3"
      android:paddingTop="10dp"
      android:text="@string/overview"
      android:layout_below="@+id/tv_item_name"
      android:layout_alignParentRight="true"
      android:layout_alignParentEnd="true"
      android:layout_alignLeft="@+id/tv_item_name"
      android:layout_alignStart="@+id/tv_item_name" />

    <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_toRightOf="@id/img_item_photo"
      android:orientation="horizontal">

      <Button
        android:id="@+id/btn_set_favorite"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/detail"
        android:textSize="11sp" />

      <Button
        android:id="@+id/btn_set_share"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/share"
        android:textSize="11sp" />
    </LinearLayout>
  </RelativeLayout>
</android.support.v7.widget.CardView>