<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/activity_detail"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:background="@color/chrome_grey"
  tools:context=".activity.DetailActivity">

  <include layout="@layout/toolbar"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <LinearLayout
        android:id="@+id/lnr_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:paddingBottom="@dimen/activity_vertical_margin">

          <ImageView
            android:id="@+id/img_movie"
            android:layout_width="150dp"
            android:layout_height="220dp"
            app:srcCompat="@drawable/noimageplaceholder"
            android:paddingRight="@dimen/activity_horizontal_margin" />

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

              <TextView
                android:id="@+id/tv_title"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:ellipsize="none"
                android:maxLines="2" />

              <CheckBox
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:id="@+id/ck_fav"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"/>

            </LinearLayout>

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

              <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textStyle="bold" />

              <TextView
                android:id="@+id/tv_release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            </LinearLayout>

          </LinearLayout>

        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:paddingBottom="5dp">

          <TextView
            android:id="@+id/tv_Xoverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/overview"
            android:textStyle="bold" />

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textStyle="bold" />

          <TextView
            android:id="@+id/tv_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7" />

        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:paddingBottom="5dp">

          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/vote_average"
            android:textStyle="bold" />

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textStyle="bold" />

          <TextView
            android:id="@+id/tv_vote_average"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7" />

        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:paddingBottom="5dp">

          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/vote_count"
            android:textStyle="bold" />

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textStyle="bold" />

          <TextView
            android:id="@+id/tv_vote_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7" />

        </LinearLayout>

      </LinearLayout>

    </ScrollView>

  </LinearLayout>


  <LinearLayout
    android:id="@+id/lnr_progress"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:visibility="gone">

    <ProgressBar
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:layout_gravity="center"
      android:foregroundGravity="center_vertical" />

  </LinearLayout>
</LinearLayout>
